# build-immersive-gd

./: .gitignore  CMakeLists.txt  README.md  about.md  changelog.md  manual_deps.cmd  mod.json
.github/workflows/: multi-platform.yml
resources/models/: README.md
src/: CCVideoPlayerNode.cpp  VideoFrame.cpp  VideoPlayer.cpp  VideoTools.hpp  mod.hpp
src/hooks/: EditLevelLayer.cpp  EditLevelLayer.hpp  GJBaseGameLayer.cpp  GJBaseGameLayer.hpp  LevelInfoLayer.cpp  LevelInfoLayer.hpp  MenuLayer.cpp  PlayLayer.cpp
src/nnTools/: NNTools.hpp  PoseEstimator.cpp  PoseEstimator.hpp  PoseFrame.cpp  PoseFrame.hpp
src/popups/: SelectDevicePopup.cpp  SelectDevicePopup.hpp  VideoPreviewPopup.cpp  VideoPreviewPopup.hpp  VideoSettingsPopup.cpp  VideoSettingsPopup.hpp
src/pose/: Pose.cpp  Pose.hpp  PoseData.cpp  PoseFrame.cpp  PoseFrame.hpp  PoseResolver.cpp  PoseResolver.hpp
src/settings/: SelectCameraSetting.cpp  Settings.hpp  Updater.cpp
src/utils/: ChoiceNode.cpp  ChoiceNode.hpp  FpsLimiter.hpp  Utils.cpp  Utils.hpp
src/videoTools/: CameraMan.cpp  CameraMan.hpp  ErrorFrame.cpp  ErrorFrame.hpp  VideoFrame.cpp  VideoFrame.hpp  VideoFrameAlpha.cpp  VideoPlayer.cpp  VideoPlayer.hpp  VideoTools.hpp
tutorials/: directml_troubleshooting.md  general.md  general_ru.md
